# rainlendar-archival

./: README.md  Rainlendar Install Script.nsi  Rainlendar.cpp  Rainlendar.dsp  Rainlendar.dsw  Rainlendar.rc  StdAfx.cpp
Application/: Application.dsp  Rainlendar.cpp  Rainlendar.rc
Help/: Bangs.htm  Contact.htm  History.htm  Installation.htm  Introduction.htm  License.htm  Plugins.htm  Rainlendar.hhp  Settings.htm  Skins.htm  Steprc.htm  Table of Contents.hhc
Host/: Host.dsp  Host.plg  Rainlendar.cpp  Rainlendar.rc  resource.h
IniFormatPlugin/: IniFormatPlugin.dsp  IniPlugin.cpp  IniPlugin.h  IniPlugin.rc  SetupDialog.cpp  resource.h
OutlookPlugin/: OutlookPlugin.cpp  OutlookPlugin.dsp  OutlookPlugin.h  SetupDialog.cpp  resource.h
Plugin/: AllEventsDialog.cpp  AllEventsDialog.h  Background.cpp  Background.h  CalendarWindow.cpp  CalendarWindow.h  Config.cpp  Config.h  ConfigDialog.cpp  ConfigDialog.h  Date.h  DialogDays.cpp  DialogDays.h  DialogEvent.cpp  DialogEvent.h  DialogGeneral.cpp  DialogGeneral.h  DialogMonth.cpp  DialogMonth.h  DialogServer.cpp  DialogServer.h  DialogToday.cpp  DialogToday.h  DialogWeekNumbers.cpp  DialogWeekNumbers.h  DialogWeekdays.cpp  DialogWeekdays.h  DialogYear.cpp  DialogYear.h  EditEvent.cpp  EditEvent.h  (+82 more)
Server/: AUTHORS  ChangeLog  EventCombiner.cpp  EventCombiner.h  IPFilter.cpp  IPFilter.h  IPNumber.cpp  IPNumber.h  IniFile.cpp  IniFile.h  Makefile  Makefile.am  Makefile.in  NEWS  README  RainlendarServer.cpp  RainlendarServer.h  ReadMe.txt  Server.dsp  Server.rc  configure  configure.in  filter.txt  main.cpp  resource.h
(+90 files in other folders)
